# slurm_job_resource_monitor

./: .pre-commit-config.yaml  LICENSE  README.md  instructions_for_uploading_to_pip  pyproject.toml  requirements.txt  setup.cfg
slurm_job_resource_monitor/: job_monitor.py
tests/: all_jobs_test_file.json  test_job_monitor.py
